--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <div class="container-lg" px-3 my-5 markdown-body>
+    <div class="container-lg px-3 my-5 markdown-body">
     </div>
   </body>
 </html>
